<resources>
    <string name="app_name">Core Sample</string>
    <string name="button_label_user_management">User Management</string>
    <string name="button_label_user_rewards">User Rewards</string>
    <string name="button_label_arhunts">ARHunts</string>
    <string name="button_label_location_markers">Location Markers</string>
    <string name="button_label_ondemand_markers">OnDemand Markers</string>
    <string name="button_label_dev_tools">Developer Tools</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_new_user">Create New User</string>
    <string name="migrate_user">Migrate User</string>
    <string name="login_user">Login User</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_external_unserId">Enter external userId:</string>
    <string name="migrate_message">After id regeneration, the data of current userId will be lost. If you would like to migrate data, click MIGRATE, otherwise click OK.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clue_card">Clue Card</string>
    <string name="hunt_markers">Hunt Markers</string>
    <string name="hunt_rewards">Hunt Rewards</string>
    <string name="huntmarker_data">Hunt Marker Data</string>
    <string name="reward">Reward</string>
    <string name="huntreward_data">Hunt Reward Data</string>
    <string name="marker_name">Marker Name</string>
    <string name="marker_image">Marker Image</string>
    <string name="marker_data">Marker Data</string>
    <string name="reward_instruction">You will get reward after engaging AR experience.</string>
    <string name="get_user_reward_by_id">Get User Reward by ID</string>
    <string name="get_marker_by_id">Get Marker by ID</string>
    <string name="app_logo">App Logo</string>
    <string name="iar_core_sdk">Core SDK</string>
    <string name="get_location_markers">Get Location Markers</string>
    <string name="nearby">Nearby</string>
    <string name="take_me_there">Take me there</string>
    <string name="get_ar_hunt_by_id">Get AR Hunt by ID</string>
    <string name="marker_details">Marker Details</string>

    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="retroactive_contribution">Retroactive Contribution:</string>
    <string name="get_ar_hunt">Get AR Hunt</string>
    <string name="enter_hunt_id">Enter hunt ID</string>
    <string name="no_hunt_id">Don\'t have the hunt Id</string>
    <string name="id">ID:</string>
    <string name="hunt_id">Hunt Id:</string>
    <string name="type">Type:</string>
    <string name="default_location">Coordinates: 48.166667,-100.166667 Radius: 10000</string>
    <string name="coordinates">Coordinates:</string>
    <string name="radius">Radius: 10000</string>
    <string name="there_is_error">There is error</string>
    <string name="location_hint">48.166667, -100.166667</string>
    <string name="enter_location_coordinates">Enter location coordinates</string>
    <string name="distance">Distance:</string>
    <string name="enter_marker_id">Enter Marker ID:</string>
    <string name="reward_name">Reward Name:</string>
    <string name="reward_id">Reward Id:</string>
    <string name="action_button_enabled">ActionButtonEnabled:</string>
    <string name="action_button_text">ActionButtonText:</string>
    <string name="action_button_url">ActionButtonUrl:</string>
    <string name="reward_reason">Reward Reason:</string>
    <string name="get_user_reward">Get User Reward</string>
    <string name="enter_reward_id">Enter reward ID</string>
    <string name="no_reward_id">Don\'t have this reward id</string>

</resources>