<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sampleApp_darkBlue"
    tools:context=".ui.fragments.main.MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_activity_edge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_activity_edge"
            app:cornerRadius="@dimen/dimen_corner_round"
            android:contentDescription="@string/button_label_user_management"
            android:text="@string/button_label_user_management"
            android:id="@+id/userManagementButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_activity_edge"
            app:cornerRadius="@dimen/dimen_corner_round"
            android:contentDescription="@string/button_label_user_rewards"
            android:text="@string/button_label_user_rewards"
            android:id="@+id/userRewardButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_activity_edge"
            app:cornerRadius="@dimen/dimen_corner_round"
            android:contentDescription="@string/button_label_arhunts"
            android:text="@string/button_label_arhunts"
            android:id="@+id/arHuntButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_activity_edge"
            app:cornerRadius="@dimen/dimen_corner_round"
            android:contentDescription="@string/button_label_location_markers"
            android:text="@string/button_label_location_markers"
            android:id="@+id/locationMarkerButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_activity_edge"
            app:cornerRadius="@dimen/dimen_corner_round"
            android:contentDescription="@string/button_label_ondemand_markers"
            android:text="@string/button_label_ondemand_markers"
            android:id="@+id/ondemandMarkerButton"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_label_dev_tools"
            app:cornerRadius="@dimen/dimen_corner_round"
            android:text="@string/button_label_dev_tools"
            android:id="@+id/devToolsButton"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>