<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.arhunts.HuntMarkerDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/markerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/marker_details"
            android:textColor="@color/navy"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/markerImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_below="@id/markerDetails"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/clue_card"
            android:src="@drawable/splash_icon">
        </ImageView>

        <TextView
            android:id="@+id/markerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/markerDetails"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/markerImage"
            android:textColor="@color/grey"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="clue card Id" />

        <TextView
            android:id="@+id/markerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/markerName"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/markerImage"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/grey"
            android:textSize="14sp"
            tools:text="Clue card Description" />
    </RelativeLayout>

    <TextView
        android:id="@+id/huntMarkerDataTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/huntmarker_data"
        android:textColor="@color/navy"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/huntMarkerData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/grey">
        </TextView>
    </ScrollView>

</LinearLayout>